--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,8 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-typescript"],
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-typescript"
+  ],
   "compact": true,
   "generatorOpts": {
     "maxSize": 1000000
