--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "@babel/preset-env": "^7.22.4",
         "@babel/preset-react": "^7.22.3",
         "@babel/preset-typescript": "^7.21.5",
-        "@types/node": "^16"
+        "@types/node": "^16",
+        "babel-loader": "^9.1.2",
+        "typescript": "^5.1.3"
     },
     "dependencies": {
         "@pulumi/aws": "^5.0.0",
