--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "pulumi-aws-utils",
     "main": "index.ts",
+    "type": "module",
     "scripts": {
         "build": "babel . -d dist"
     },
