--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "pulumi-aws-utils",
     "main": "dist/index.js",
+    "typings": "dist/index.d.ts",
     "scripts": {
         "build": "babel . -d dist"
     },
