--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "main": "dist/index.js",
     "typings": "dist/index.d.ts",
     "scripts": {
-        "build": "npx tsc",
-        "postinstall": "npx tsc"
+        "build": "npx tsc"
     },
     "devDependencies": {
         "@babel/cli": "^7.21.5",
