creating build files

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "main": "dist/index.js",
     "typings": "dist/index.d.ts",
     "scripts": {
-        "build": "npx tsc"
+        "build": "rm -rf dist; npx tsc"
     },
     "devDependencies": {
         "@babel/cli": "^7.21.5",
